--- a/new.html
+++ b/new.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <br><div class="log"><a href="login2.php" class="btn btn-success"><h5>Login</h5></a></div>
+    <h1>hello</h1>
 </body>
 </html>
